changed index.html directory

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Cube</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 <body class="h-svh flex flex-col justify-center items-center bg-slate-900">
     <div class="container w-[600px] h-[600px] rounded-sm flex justify-center items-center perspective-[1000px] perspective-origin-top-right">
